revert project language level back to java 9 from 11
change usages of Path.of(...) to Paths.get(...)